renewal welcome page

--- a/index.html
+++ b/index.html
@@ -271,6 +271,8 @@ Error message and password prompt
 
 <li>画像からリアルタイム物体除去</li>
 
+<li>関心空間</li>
+
 <li>機械学習とシミュレーション</li>
 
 <li>構内バスの自動運転</li>
@@ -6013,9 +6015,9 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20150821020915767" modified="20150821020924801" title="$:/DefaultTiddlers">
+<div created="20150821020915767" modified="20151124090538874" title="$:/DefaultTiddlers">
 <pre>[[はじめに]]
-</pre>
+[[関心空間]]</pre>
 </div>
 <div title="$:/isEncrypted">
 <pre>no</pre>
@@ -6050,10 +6052,10 @@ Error message and password prompt
 <div modified="20151124063115439" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/TiddlerFields</pre>
 </div>
-<div modified="20151124063130752" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Plugins</pre>
+<div modified="20151124090532204" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div modified="20151124071608819" title="$:/state/tab/sidebar--1835078512">
+<div modified="20151124090527423" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div modified="20151124060919994" title="$:/state/tab2-1286131025">
@@ -6570,10 +6572,22 @@ Jupyter
 http://www.sapphirepgs.com/page.asp?IDno=1319&amp;lang=jap#.VfFhZmiXZdg.facebook
 </pre>
 </div>
-<div created="20150821020950329" modified="20150827083336275" tags="" title="はじめに">
-<pre>タグをキーワードとしてまとめていこうと思います。
+<div created="20150821020950329" modified="20151124090511099" tags="" title="はじめに">
+<pre>日頃の活動の中で、面白そうだと思ったものについてメモり、タグを付けてまとめています。
 
-&lt;&lt;tabs &quot;[all[tiddlers]tags[]sort[]]&quot; &quot;ツール&quot; &quot;$:/state/tab2&quot; &quot;tc-vertical&quot; tagView&gt;&gt;</pre>
+! 現在の活動
+
+先端技術という名目のもとに、出口出口と言われながら、今後の何かに使えそうなものを探しまわっています。
+
+軸は、機械学習とかデータ分析ですが、学習のコストが高すぎるいわゆる ~DeepLearning はあまり追求していません。
+
+代わりに、どれだけデータ分析の試行錯誤をサボれるかという面で機械学習を見ています。
+
+それから、 Scala を勉強中です。これまで、それで何ができるのか？というあたりで、モチベーションを維持できなかったのですが、 [[CodinGame|https://www.codingame.com/]]で楽しめるようになりました。
+
+! [[関心空間]]とは
+
+タグをキーワードとして参照できるようにしてみました。</pre>
 </div>
 <div created="20150901005840068" modified="20151120064534615" tags="マイニング" title="フラクタル解析">
 <pre>首都 大学院理工学研究科 矢澤
@@ -6628,6 +6642,9 @@ http://jp.techcrunch.com/2015/08/05/20150804that-some-csi-style-magic-photo-zoom
 マーカーをもとに、周囲を寄せて隠す平面を作成し、物体を消す。
 
 Oculus を装着させて、加工後の画像を見せれば、見せたくないものを隠すことができる。</pre>
+</div>
+<div created="20151124090436042" modified="20151124090516387" tags="" title="関心空間">
+<pre>&lt;&lt;tabs &quot;[all[tiddlers]tags[]sort[]]&quot; &quot;ツール&quot; &quot;$:/state/tab2&quot; &quot;tc-vertical&quot; tagView&gt;&gt;</pre>
 </div>
 <div created="20151120070138161" modified="20151120070307531" tags="機械学習 シミュレーション" title="機械学習とシミュレーション">
 <pre>学習内容を強化するために、シミュレーションを繰り返し、結果をフィードバックさせることをずっと継続し、精度を高めている。
