OBDとか直した

--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@ Error message and password prompt
 
 <li>$:/state/sidebar</li>
 
+<li>$:/state/tab--1876391481</li>
+
 <li>$:/state/tab--1963855381</li>
 
 <li>$:/state/tab--2112689675</li>
@@ -146,6 +148,8 @@ Error message and password prompt
 <li>$:/state/tab-1749438307</li>
 
 <li>$:/state/tab/sidebar--1835078512</li>
+
+<li>$:/state/tab2--944550785</li>
 
 <li>$:/state/tab2-1286131025</li>
 
@@ -207,9 +211,9 @@ Error message and password prompt
 
 <li>NVD3</li>
 
-<li>Objective-C to Swift Converter</li>
+<li>OBD2ドングル</li>
 
-<li>ODB2ドングル</li>
+<li>Objective-C to Swift Converter</li>
 
 <li>OpenACC</li>
 
@@ -6037,8 +6041,11 @@ Error message and password prompt
 <div modified="20151124061032676" title="$:/state/ShowPaletteEditor">
 <pre>yes</pre>
 </div>
-<div modified="20151124053330191" title="$:/state/sidebar">
+<div modified="20151125082644352" title="$:/state/sidebar">
 <pre>yes</pre>
+</div>
+<div modified="20151125014414074" title="$:/state/tab--1876391481">
+<pre>$:/core/ui/TiddlerInfo/Advanced</pre>
 </div>
 <div modified="20151124061001122" title="$:/state/tab--1963855381">
 <pre>$:/core/ui/ControlPanel/Palette</pre>
@@ -6055,8 +6062,11 @@ Error message and password prompt
 <div modified="20151124090532204" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div modified="20151124090527423" title="$:/state/tab/sidebar--1835078512">
+<div modified="20151125014330618" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
+</div>
+<div modified="20151125011712540" title="$:/state/tab2--944550785">
+<pre>3D</pre>
 </div>
 <div modified="20151124060919994" title="$:/state/tab2-1286131025">
 <pre>3D</pre>
@@ -6067,7 +6077,7 @@ Error message and password prompt
 <div modified="20150821022052632" title="$:/state/tag-manager/ツール">
 <pre>closed</pre>
 </div>
-<div list="はじめに" title="$:/StoryList">
+<div list="はじめに 関心空間" title="$:/StoryList">
 <pre></pre>
 </div>
 <div modified="20151023010153559" title="$:/temp/advancedsearch">
@@ -6347,14 +6357,7 @@ http://dev.classmethod.jp/references/html5-d3/
 
 http://nvd3.org/</pre>
 </div>
-<div created="20150821050743826" modified="20150821050927708" tags="ツール プログラミング" title="Objective-C to Swift Converter">
-<pre>Objective CのソースコードをSwiftに一発変換してくれるサイト「Objective-C to Swift Converter」
-
-http://www.lifehacker.jp/2015/08/150812objective_cswiftobjective.html
-
-http://objectivec2swift.net/#/converter</pre>
-</div>
-<div created="20150821051320302" modified="20150821051408928" tags="自動車 車載" title="ODB2ドングル">
+<div created="20150821051320302" modified="20151125011602036" tags="自動車 車載" title="OBD2ドングル">
 <pre>今は無効化されているみたいだけど、車とのチャットでハッキングできたらしい、OBD2ドングル。
 
 http://jvn.jp/vu/JVNVU93910224/
@@ -6362,6 +6365,13 @@ http://jvn.jp/vu/JVNVU93910224/
 http://www.mobile-devices.com/our-products/c4-obd2-dongle/
 
 http://japanese.engadget.com/2015/08/13/sms-obd-ii/</pre>
+</div>
+<div created="20150821050743826" modified="20150821050927708" tags="ツール プログラミング" title="Objective-C to Swift Converter">
+<pre>Objective CのソースコードをSwiftに一発変換してくれるサイト「Objective-C to Swift Converter」
+
+http://www.lifehacker.jp/2015/08/150812objective_cswiftobjective.html
+
+http://objectivec2swift.net/#/converter</pre>
 </div>
 <div created="20151006035603166" modified="20151006035639864" tags="GPGPU ツール HPC" title="OpenACC">
 <pre>CUDA向け。
@@ -6572,8 +6582,10 @@ Jupyter
 http://www.sapphirepgs.com/page.asp?IDno=1319&amp;lang=jap#.VfFhZmiXZdg.facebook
 </pre>
 </div>
-<div created="20150821020950329" modified="20151124090511099" tags="" title="はじめに">
+<div created="20150821020950329" modified="20151125093855547" tags="" title="はじめに">
 <pre>日頃の活動の中で、面白そうだと思ったものについてメモり、タグを付けてまとめています。
+
+もともと、~GitHub Pages には共有情報を載せるつもりでしたが、共有の文化が無い相手に発信しても使われないことがわかったので、自分のメモとして使うことにしました。
 
 ! 現在の活動
 
