kibit AI engine

--- a/index.html
+++ b/index.html
@@ -211,6 +211,8 @@ Error message and password prompt
 
 <li>KhronosのAPI Vulkan</li>
 
+<li>kibit</li>
+
 <li>libra</li>
 
 <li>Lyra</li>
@@ -6132,7 +6134,7 @@ Error message and password prompt
 <div modified="20150821022052632" title="$:/state/tag-manager/ツール">
 <pre>closed</pre>
 </div>
-<div list="[[Markdown プラグイン]] はじめに 関心空間" title="$:/StoryList">
+<div list="kibit [[Bitfusion.io の Cloud Adapter]] はじめに 関心空間" title="$:/StoryList">
 <pre></pre>
 </div>
 <div modified="20151023010153559" title="$:/temp/advancedsearch">
@@ -6155,7 +6157,7 @@ Error message and password prompt
 <div created="20150821021252334" modified="20151120070200507" title="$:/temp/NewTagName">
 <pre></pre>
 </div>
-<div created="20150901045706940" modified="20151120070343692" title="$:/temp/search">
+<div created="20150901045706940" modified="20151201073416607" title="$:/temp/search">
 <pre></pre>
 </div>
 <div modified="20151124060954362" title="$:/theme">
@@ -6395,6 +6397,15 @@ http://qiita.com/hshimo/items/01ebfa167a45d5443112
 </div>
 <div created="20150821051100207" modified="20150904001727873" tags="API GPU GPGPU HPC" title="KhronosのAPI Vulkan">
 <pre>次世代 ~OpenGL 。中間言語 SPIR-V で  ~OpenCL もまとめる。</pre>
+</div>
+<div created="20151201100207751" modified="20151201100256758" tags="機械学習 支援" title="kibit">
+<pre>UBICが開発しているAIエンジン。
+
+搭載しているロボットもある。
+
+http://www.ubic.co.jp/library/features/2015/20151127113030.html
+
+http://www.rappa.com/robot.html</pre>
 </div>
 <div created="20151126042138893" modified="20151126042206986" tags="GPU GPGPU HPC" title="libra">
 <pre>SDKを利用して外部のGPUを利用する。
