--- a/index.html
+++ b/index.html
@@ -195,6 +195,8 @@ Error message and password prompt
 
 <li>DavMail</li>
 
+<li>DCGAN</li>
+
 <li>e-onソフトウェア</li>
 
 <li>E2D3</li>
@@ -6146,7 +6148,7 @@ Error message and password prompt
 <div modified="20150821022052632" title="$:/state/tag-manager/ツール">
 <pre>closed</pre>
 </div>
-<div list="はじめに [[Optimal transport distances]] [[Topological Data Analysis (TDA)]] 関心空間" title="$:/StoryList">
+<div list="DCGAN はじめに 関心空間" title="$:/StoryList">
 <pre></pre>
 </div>
 <div modified="20151023010153559" title="$:/temp/advancedsearch">
@@ -6169,7 +6171,7 @@ Error message and password prompt
 <div created="20150821021252334" modified="20151120070200507" title="$:/temp/NewTagName">
 <pre></pre>
 </div>
-<div created="20150901045706940" modified="20151211045720701" title="$:/temp/search">
+<div created="20150901045706940" modified="20151222015004407" title="$:/temp/search">
 <pre></pre>
 </div>
 <div modified="20151124060954362" title="$:/theme">
@@ -6346,6 +6348,13 @@ http://nagao-lab.ynu.ac.jp/r_samples/samples.html</pre>
 <div created="20151016091654861" modified="20151016091735182" tags="オフィス" title="DavMail">
 <pre>Exchangeサーバのメールクライアントで、普通のメーラが利用できるようにする、ゲートウェイ</pre>
 </div>
+<div created="20151225022653385" modified="20151225022824872" tags="機械学習" title="DCGAN">
+<pre>DCGAN([[元論文|http://arxiv.org/abs/1511.06434]])はGenerative Adversarial Networkというアルゴリズムの発展形
+
+ネタはともかく、内容が面白いです。これだと、内部の特徴空間にある程度意味ができてくるので、流線とCd値の学習にもいいかもしれません。こいつは、学習するのはもちろん、あとで相関を見ながら適切なCdが出るような流線を探すことになりそうなので。
+
+http://qiita.com/mattya/items/e5bfe5e04b9d2f0bbd47</pre>
+</div>
 <div created="20150924023756956" modified="20150924024027191" tags="3D" title="e-onソフトウェア">
 <pre>Bentleyが買収した、リアルタイムでリアルな3Dソフト。テレビや映画でも利用され定評がある。自然界のデジタル表現から人工物まで。
 
@@ -6440,8 +6449,8 @@ http://qiita.com/hshimo/items/01ebfa167a45d5443112
 <div created="20150821051100207" modified="20150904001727873" tags="API GPU GPGPU HPC" title="KhronosのAPI Vulkan">
 <pre>次世代 ~OpenGL 。中間言語 SPIR-V で  ~OpenCL もまとめる。</pre>
 </div>
-<div created="20151201100207751" modified="20151201100256758" tags="機械学習 支援" title="kibit">
-<pre>UBICが開発しているAIエンジン。
+<div created="20151201100207751" modified="20151222063859674" tags="機械学習 支援" title="kibit">
+<pre>[[UBIC]]が開発しているAIエンジン。
 
 搭載しているロボットもある。
 
