--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@ Error message and password prompt
 
 <li>Android Cloud Environment（ACE）</li>
 
+<li>bayesian program learning (BPL)</li>
+
 <li>Beaker Notebook</li>
 
 <li>Bitfusion.io の Boost (Cloud Adapter)</li>
@@ -6148,7 +6150,7 @@ Error message and password prompt
 <div modified="20150821022052632" title="$:/state/tag-manager/ツール">
 <pre>closed</pre>
 </div>
-<div list="DCGAN はじめに 関心空間" title="$:/StoryList">
+<div list="[[bayesian program learning (BPL)]] はじめに 関心空間" title="$:/StoryList">
 <pre></pre>
 </div>
 <div modified="20151023010153559" title="$:/temp/advancedsearch">
@@ -6291,6 +6293,18 @@ Error message and password prompt
 VMI分野における米軍の取り組みとしてよく知られているのが、国防総省と米Hyporiによる共同開発だ。HyporiはVMI技術を専門に手掛けるソフトウェア企業。国防総省とHyporiは、セキュアな米軍ネットワーク上でVMIを配布するためのプラットフォーム「Android Cloud Environment（ACE）」を共同で開発した。
 
 http://techtarget.itmedia.co.jp/tt/news/1508/26/news08.html</pre>
+</div>
+<div created="20160104051637111" modified="20160104051924580" tags="機械学習" title="bayesian program learning (BPL)">
+<pre>deep learning のように、ズバリを認識させるのではなく、あちこちの知識を組み合わせて、例が１つでも推測などを加えて学習すること。
+
+推測が入るのが bayesian なところか。参考プログラムを見つけた。
+
+[[https://github.com/brendenlake/BPL]]
+
+注目になった論文はこちら。
+
+[[http://cims.nyu.edu/~brenden/LakeEtAl2015Science.pdf]]
+</pre>
 </div>
 <div created="20151208083209501" modified="20151208083423941" tags="ツール プログラミング 可視化" title="Beaker Notebook">
 <pre>Jupyterでカーネルの扱いをノート単位ではなく、セル単位にしたようなもの。
