--- a/WhatIsDLmodel/index.html
+++ b/WhatIsDLmodel/index.html
@@ -121,8 +121,6 @@ Error message and password prompt
 
 <li>$:/DefaultTiddlers</li>
 
-<li>$:/Import</li>
-
 <li>$:/isEncrypted</li>
 
 <li>$:/palette</li>
@@ -135,13 +133,11 @@ Error message and password prompt
 
 <li>$:/state/tab--1963855381</li>
 
-<li>$:/state/tab--2112689675</li>
-
-<li>$:/state/tab--959111941</li>
-
 <li>$:/state/tab-1749438307</li>
 
 <li>$:/state/tab/sidebar--1835078512</li>
+
+<li>$:/state/tab1-1151853819</li>
 
 <li>$:/state/tab2-1151853819</li>
 
@@ -149,19 +145,21 @@ Error message and password prompt
 
 <li>$:/temp/info-plugin</li>
 
-<li>$:/temp/search</li>
-
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
-<li>TDA</li>
+<li>DLの入力として利用</li>
 
-<li>スパースモデリング</li>
+<li>tagView</li>
+
+<li>TDAとは</li>
+
+<li>スパースモデリングとは</li>
 
 <li>データの特徴空間</li>
 
-<li>どうするのか</li>
+<li>どうするか</li>
 
 </ul>
 </p>
@@ -6222,49 +6220,41 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20160225020700877" modified="20160225020808528" title="$:/DefaultTiddlers">
-<pre>[[どうするのか]]
+<div created="20160225081650557" modified="20160225081653909" title="$:/DefaultTiddlers">
+<pre>[[どうするか]]
 </pre>
-</div>
-<div status="complete" title="$:/Import">
-<pre>The following tiddlers were imported:
-
-# [[Untitled]]</pre>
 </div>
 <div title="$:/isEncrypted">
 <pre>no</pre>
 </div>
-<div created="20160225020949927" modified="20160225020949927" title="$:/palette">
+<div created="20160225081927419" modified="20160225081927419" title="$:/palette">
 <pre>$:/palettes/DarkPhotos</pre>
 </div>
-<div created="20160225020609516" modified="20160225020630939" title="$:/SiteSubtitle">
+<div created="20160225081649232" modified="20160225081649232" title="$:/SiteSubtitle">
 <pre>深層学習のモデルを直接分析する</pre>
 </div>
-<div created="20160225020556315" modified="20160225020623231" title="$:/SiteTitle">
+<div created="20160225081643348" modified="20160225081643348" title="$:/SiteTitle">
 <pre>モデルの分析</pre>
 </div>
-<div created="20160225022343863" modified="20160225022811100" title="$:/state/showeditpreview">
+<div created="20160225081726657" modified="20160225081726657" title="$:/state/showeditpreview">
 <pre>yes</pre>
 </div>
-<div created="20160225020923021" modified="20160225020946966" title="$:/state/tab--1963855381">
+<div created="20160225081925986" modified="20160225081925986" title="$:/state/tab--1963855381">
 <pre>$:/core/ui/ControlPanel/Palette</pre>
 </div>
-<div created="20160225020840906" modified="20160225020840906" title="$:/state/tab--2112689675">
-<pre>$:/core/ui/ControlPanel/Advanced</pre>
-</div>
-<div created="20160225020846252" modified="20160225020850539" title="$:/state/tab--959111941">
-<pre>$:/core/ui/ControlPanel/TiddlerFields</pre>
-</div>
-<div created="20160225020853484" modified="20160225020918518" title="$:/state/tab-1749438307">
+<div created="20160225081925226" modified="20160225081925226" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20160225030142320" modified="20160225030142321" title="$:/state/tab/sidebar--1835078512">
+<div created="20160225082143541" modified="20160225082303165" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
-<div created="20160225023939560" modified="20160225023947128" title="$:/state/tab2-1151853819">
+<div created="20160225082328214" modified="20160225082347535" title="$:/state/tab1-1151853819">
+<pre>特徴空間</pre>
+</div>
+<div created="20160225082249294" modified="20160225082646585" title="$:/state/tab2-1151853819">
 <pre>TDA</pre>
 </div>
-<div list="どうするのか" title="$:/StoryList">
+<div list="tagView どうするか データの特徴空間" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -6280,9 +6270,6 @@ Error message and password prompt
         }
     }
 }</pre>
-</div>
-<div created="20160225022203565" modified="20160225022706971" title="$:/temp/search">
-<pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.11">
 <pre>{
@@ -6389,27 +6376,35 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20160225023623025" modified="20160225023819153" tags="データの特徴空間 TDA" title="TDA">
-<pre>!Topological Data Analysis
+<div created="20160225081734298" modified="20160225081809426" tags="TDA 特徴空間" title="DLの入力として利用">
+<pre>富士通研究所
+
+時系列データを、カオス理論＋TDAで、形状として分析できるようにして、これをDLに入力。
+
+その後、通常状態を学習させ、異常を検出。</pre>
+</div>
+<div created="20160225082637391" modified="20160225082717946" tags="" title="tagView">
+<pre>&lt;&lt;list-links filter:&quot;[tag&lt;currentTab&gt;]&quot;&gt;&gt;</pre>
+</div>
+<div created="20160225081904748" modified="20160225081919787" tags="TDA 特徴空間" title="TDAとは">
+<pre>Topological Data Analysis
 
 データ空間にたいし、その分布を形状として捉えて、その形状に意味を見出すもの。</pre>
 </div>
-<div created="20160225024154219" modified="20160225024943306" tags="データの特徴空間 スパースモデリング" title="スパースモデリング">
-<pre>!スパースモデリング
-
-少ないデータでなんとかするというもの。そのため、データの空間を予測する必要があるのだけど。</pre>
+<div created="20160225081820363" modified="20160225081855922" tags="特徴空間 スパースモデリング" title="スパースモデリングとは">
+<pre>少ないデータでなんとかするというもの。そのため、データの空間を予測する必要があるのだけど。</pre>
 </div>
-<div created="20160225023128387" modified="20160225024054458" title="データの特徴空間">
+<div created="20160225081638870" modified="20160225082728399" tags="" title="データの特徴空間">
 <pre>深層学習のニューラルネットワークがやっていることは、ざっくり
 
 * 特徴を抽出し、その空間を作ること
 * その空間内で特徴を区分したり、特徴にフィットした曲面をつくること
 
-ではないだろうか。では、データからもう少し特徴を直接的に見ることができないか考える。本来は学習の中でうまく学ぶのだが、現状では学習できるような構成に仕立てられたニューラルネットワークの構成に依存する。できれば、構成に依存しない見方が必要だ。
+ではないだろうか。では、データからもう少し特徴を直接的に見ることができないか考える。本来は学習の中でうまく学ぶのだが、現状では学習できるような構成に仕立てられたニューラルネットワークの構成に依存する。できれば、構成に依存しない見方が必要だ。 
 
-&lt;&lt;tabs &quot;[tag[データの特徴空間]tags[]sort[]]&quot; &quot;&quot; &quot;$:/state/tab2&quot; &quot;tc-vertical&quot; tagView&gt;&gt;</pre>
+&lt;&lt;tabs &quot;[all[tiddlers]tags[]sort[]]&quot; &quot;特徴空間&quot; &quot;$:/state/tab1&quot; &quot;tc-vertical&quot; tagView&gt;&gt;</pre>
 </div>
-<div created="20160225020813124" modified="20160225023111647" tags="" title="どうするのか">
+<div created="20160225082021631" modified="20160225082159990" title="どうするか">
 <pre>深層学習のモデルをどうしたらうまく設計できるか考える。
 
 そのためには、既存のモデルは[[学習後]]どうなっているのだろうということを分析することと、学習させたい[[データの特徴空間]]とどのような関係があるのかを検討できるのがいいだろうと考えた。</pre>
