--- a/index.html
+++ b/index.html
@@ -137,9 +137,17 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/showeditpreview</li>
+
 <li>$:/state/tab--2112689675</li>
 
+<li>$:/state/tab--86143343</li>
+
 <li>$:/state/tab-1749438307</li>
+
+<li>$:/state/tab/sidebar--1835078512</li>
+
+<li>$:/state/tab2--944550785</li>
 
 <li>$:/StoryList</li>
 
@@ -279,7 +287,7 @@ Error message and password prompt
 
 <li>ブロックチェーン</li>
 
-<li>ベイズ最適化</li>
+<li>ベイズ的最適化</li>
 
 <li>ホーキング博士が利用する音声ソフト</li>
 
@@ -6571,13 +6579,25 @@ Error message and password prompt
 <div created="20150821020758640" modified="20151124063012656" title="$:/SiteTitle">
 <pre>What's insteresting?</pre>
 </div>
+<div created="20160225073656828" modified="20160225073656828" title="$:/state/showeditpreview">
+<pre>yes</pre>
+</div>
 <div created="20160225022442352" modified="20160225022442352" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Advanced</pre>
 </div>
-<div created="20160225022455824" modified="20160225022504288" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Settings</pre>
+<div created="20160225074828767" modified="20160225074832047" title="$:/state/tab--86143343">
+<pre>$:/core/ui/ControlPanel/Plugins/Installed/Plugins</pre>
 </div>
-<div list="はじめに 関心空間" title="$:/StoryList">
+<div created="20160225022455824" modified="20160225074820839" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Plugins</pre>
+</div>
+<div created="20160225071753512" modified="20160225071753513" title="$:/state/tab/sidebar--1835078512">
+<pre>$:/core/ui/SideBar/Recent</pre>
+</div>
+<div created="20160225074543397" modified="20160225074655943" title="$:/state/tab2--944550785">
+<pre>ツール</pre>
+</div>
+<div list="学習済みニューラルネット ベイズ的最適化 はじめに 関心空間" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -6594,7 +6614,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20160225022425521" modified="20160225025014387" title="$:/temp/search">
+<div created="20160225022425521" modified="20160225043442411" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20160225022501761" modified="20160225022503337" title="$:/theme">
@@ -7354,7 +7374,7 @@ http://www.amazon.co.jp/dp/4811563115
 <pre>簡単な説明 
 http://www.slideshare.net/cookle/5-58379474</pre>
 </div>
-<div created="20160218042223738" modified="20160218042948225" tags="マイニング 機械学習" title="ベイズ最適化">
+<div created="20160218042223738" modified="20160225073628197" tags="マイニング 機械学習" title="ベイズ的最適化">
 <pre>機械学習の画像認識の最適化をベイズ的最適化 Bayesian Optimization
 
 佐藤 一誠 氏
@@ -7403,13 +7423,18 @@ http://jp.techcrunch.com/2015/08/05/20150804that-some-csi-style-magic-photo-zoom
 
 Oculus を装着させて、加工後の画像を見せれば、見せたくないものを隠すことができる。</pre>
 </div>
-<div created="20160128015053229" modified="20160128015210086" tags="機械学習" title="学習済みニューラルネット">
+<div created="20160128015053229" modified="20160225073740351" tags="機械学習" title="学習済みニューラルネット">
 <pre>こちらの論文。
 ~ImageNetのデータ使ったものがあるらしい。学習不足の傾向などを検討するにはいいんじゃないかな。
 
-http://www.nlab.ci.i.u-tokyo.ac.jp/pdf/CNN_survey.pdf</pre>
+http://www.nlab.ci.i.u-tokyo.ac.jp/pdf/CNN_survey.pdf
+
+---
+Caffe関連で~GitHubにいろいろある。
+
+https://github.com/BVLC/caffe/wiki/Model-Zoo</pre>
 </div>
-<div created="20151124090436042" modified="20160105061928636" tags="" title="関心空間">
+<div created="20151124090436042" modified="20160225082622531" tags="" title="関心空間">
 <pre>&lt;&lt;tabs &quot;[all[tiddlers]tags[]sort[]]&quot; &quot;ツール&quot; &quot;$:/state/tab2&quot; &quot;tc-vertical&quot; tagView&gt;&gt;
 
 ! Word Cloud
