--- a/WhatIsDLmodel/index.html
+++ b/WhatIsDLmodel/index.html
@@ -117,6 +117,8 @@ Error message and password prompt
 
 <p>This <a class="tc-tiddlylink-external" href="http://tiddlywiki.com" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
 
+<li>$:/config/Navigation/openLinkFromInsideRiver</li>
+
 <li>$:/core</li>
 
 <li>$:/DefaultTiddlers</li>
@@ -171,6 +173,9 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
+<div created="20160225083404959" modified="20160225083404959" title="$:/config/Navigation/openLinkFromInsideRiver">
+<pre>above</pre>
+</div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="" description="TiddlyWiki5 core" list="readme" plugin-priority="0" plugin-type="plugin" title="$:/core" type="application/json" version="5.1.11">
 <pre>{
     &quot;tiddlers&quot;: {
@@ -6242,8 +6247,8 @@ Error message and password prompt
 <div created="20160225081925986" modified="20160225081925986" title="$:/state/tab--1963855381">
 <pre>$:/core/ui/ControlPanel/Palette</pre>
 </div>
-<div created="20160225081925226" modified="20160225081925226" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Appearance</pre>
+<div created="20160225081925226" modified="20160225083356439" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Settings</pre>
 </div>
 <div created="20160225082143541" modified="20160225082303165" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
@@ -6254,7 +6259,7 @@ Error message and password prompt
 <div created="20160225082249294" modified="20160225082646585" title="$:/state/tab2-1151853819">
 <pre>TDA</pre>
 </div>
-<div list="tagView どうするか データの特徴空間" title="$:/StoryList">
+<div list="$:/ControlPanel どうするか データの特徴空間" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
