スパースモデリング

--- a/index.html
+++ b/index.html
@@ -6599,7 +6599,7 @@ Error message and password prompt
 <div created="20160225074543397" modified="20160225074655943" title="$:/state/tab2--944550785">
 <pre>ツール</pre>
 </div>
-<div list="DCGAN はじめに 関心空間" title="$:/StoryList">
+<div list="スパースモデリング ベイズ的最適化 [[bayesian program learning (BPL)]] [[Topological Data Analysis (TDA)]] DCGAN はじめに 関心空間" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -6616,8 +6616,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20160225022425521" modified="20160229035024227" title="$:/temp/search">
-<pre></pre>
+<div created="20160225022425521" modified="20160307042237410" title="$:/temp/search">
+<pre>baye</pre>
 </div>
 <div created="20160225022501761" modified="20160225022503337" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -7299,7 +7299,7 @@ http://jp.techcrunch.com/2015/07/23/20150722frame-launches-its-cloud-based-softw
 
 https://fra.me/</pre>
 </div>
-<div created="20160204014928214" modified="20160204022653009" tags="機械学習 マイニング" title="スパースモデリング">
+<div created="20160204014928214" modified="20160307051345503" tags="機械学習 マイニング" title="スパースモデリング">
 <pre>この人がキーマンかな。京都 大関真之助教
 
 http://www-adsys.sys.i.kyoto-u.ac.jp/mohzeki/About/Informatics.html
@@ -7312,9 +7312,13 @@ http://sparse-modeling.jp/
 
 こんな連載がとりあえずよくわかる。
 
-http://japan.zdnet.com/article/35074052/
+ZDNet
+スモールデータから知見を見出す「スパースモデリング」
+[[1|http://japan.zdnet.com/article/35074052/]] [[2|http://japan.zdnet.com/article/35075858/]]
 
 こんな資料も。
+
+[[http://www-adsys.sys.i.kyoto-u.ac.jp/mohzeki/Presentation/Tokyodat20160218_web.pdf]]
 
 [[http://www.is.titech.ac.jp/~s-taiji/tmp/sparse_tutorial_2014.pdf]]
 
