--- a/WhatIsDLmodel/index.html
+++ b/WhatIsDLmodel/index.html
@@ -143,6 +143,8 @@ Error message and password prompt
 
 <li>$:/state/tab2-1151853819</li>
 
+<li>$:/state/tab2-61877739</li>
+
 <li>$:/StoryList</li>
 
 <li>$:/temp/info-plugin</li>
@@ -159,9 +161,13 @@ Error message and password prompt
 
 <li>スパースモデリングとは</li>
 
+<li>スパースモデリングと深層学習</li>
+
 <li>データの特徴空間</li>
 
 <li>どうするか</li>
+
+<li>深層学習のなにがすごいのか</li>
 
 </ul>
 </p>
@@ -6259,7 +6265,10 @@ Error message and password prompt
 <div created="20160225082249294" modified="20160225082646585" title="$:/state/tab2-1151853819">
 <pre>TDA</pre>
 </div>
-<div list="$:/ControlPanel どうするか データの特徴空間" title="$:/StoryList">
+<div created="20160307052413774" modified="20160307052420646" title="$:/state/tab2-61877739">
+<pre>特徴空間</pre>
+</div>
+<div list="深層学習のなにがすごいのか スパースモデリングと深層学習 DLの入力として利用 スパースモデリングとは どうするか" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -6399,6 +6408,15 @@ Error message and password prompt
 <div created="20160225081820363" modified="20160225081855922" tags="特徴空間 スパースモデリング" title="スパースモデリングとは">
 <pre>少ないデータでなんとかするというもの。そのため、データの空間を予測する必要があるのだけど。</pre>
 </div>
+<div created="20160307052444372" modified="20160307052633402" tags="スパースモデリング" title="スパースモデリングと深層学習">
+<pre>スパースモデリングは何が不要かを見つけることで、重要な部分を残すようなことができるようだ。
+
+深層学習は注目する部分を重要な部分と考えれば、同様のことを大量のデータを通じて学習しているに過ぎない。
+
+なにか共通項が見えてこないだろうか。
+
+http://www-adsys.sys.i.kyoto-u.ac.jp/mohzeki/Presentation/Tokyodat20160218_web.pdf</pre>
+</div>
 <div created="20160225081638870" modified="20160225082728399" tags="" title="データの特徴空間">
 <pre>深層学習のニューラルネットワークがやっていることは、ざっくり
 
@@ -6409,10 +6427,24 @@ Error message and password prompt
 
 &lt;&lt;tabs &quot;[all[tiddlers]tags[]sort[]]&quot; &quot;特徴空間&quot; &quot;$:/state/tab1&quot; &quot;tc-vertical&quot; tagView&gt;&gt;</pre>
 </div>
-<div created="20160225082021631" modified="20160225082159990" title="どうするか">
+<div created="20160225082021631" modified="20160307052410881" title="どうするか">
 <pre>深層学習のモデルをどうしたらうまく設計できるか考える。
 
-そのためには、既存のモデルは[[学習後]]どうなっているのだろうということを分析することと、学習させたい[[データの特徴空間]]とどのような関係があるのかを検討できるのがいいだろうと考えた。</pre>
+そのためには、既存のモデルは[[学習後]]どうなっているのだろうということを分析することと、学習させたい[[データの特徴空間]]とどのような関係があるのかを検討できるのがいいだろうと考えた。
+
+&lt;&lt;tabs &quot;[all[tiddlers]tags[]sort[]]&quot; &quot;&quot; &quot;$:/state/tab2&quot; &quot;tc-vertical&quot; tagView&gt;&gt;</pre>
+</div>
+<div created="20160307054829680" modified="20160307055039692" tags="スパースモデリング" title="深層学習のなにがすごいのか">
+<pre>http://arxiv.org/pdf/1501.04413v1.pdf
+
+京都 大関真之助教
+
+Deep Learningの何が良いことを引き起こしているのかがよくわからないと言った声が多く聞かれます．そこまでわからないわけでもないのですけども、教師無し学習と教師あり学習がそれぞれどのような性質をもたらしているかをまずは丁寧に探りました．Deep LearningというとDeepじゃないと意味がないみたいに思われますが、扱っているデータをどのように表現するのかが非自明だから多層にするのであって、データが表現できるような状況であれば多層化する必要はないわけです．
+
+ではあの非自明な精度はどこからくるのか？それは学習をしっかりやるからです．
+ただその学習をするには大変で、そのためにAuto encoder等の対処法が必要というわけです．
+今回はその大変になる理由が、半教師あり学習特有の一次転移にあることを示しました．
+しかも教師無し学習のデータ量を大きくすると非自明な相転移があり急激に精度が良くなることがわかり、これがDeep Learningの性能の意味であることを発見しました．</pre>
 </div>
 
 </div>
