--- a/index.html
+++ b/index.html
@@ -189,6 +189,10 @@ Error message and password prompt
 
 <li>E2D3</li>
 
+<li>electron</li>
+
+<li>elixir</li>
+
 <li>FPGA</li>
 
 <li>Fumi 日本語のテキストマイニング</li>
@@ -6596,10 +6600,10 @@ Error message and password prompt
 <div created="20160225071753512" modified="20160225071753513" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
-<div created="20160225074543397" modified="20160225074655943" title="$:/state/tab2--944550785">
-<pre>ツール</pre>
+<div created="20160225074543397" modified="20160330010041442" title="$:/state/tab2--944550785">
+<pre>マイニング</pre>
 </div>
-<div list="スパースモデリング ベイズ的最適化 [[bayesian program learning (BPL)]] [[Topological Data Analysis (TDA)]] DCGAN はじめに 関心空間" title="$:/StoryList">
+<div list="elixir はじめに 関心空間" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -6616,8 +6620,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20160225022425521" modified="20160307042237410" title="$:/temp/search">
-<pre>baye</pre>
+<div created="20160225022425521" modified="20160307055200027" title="$:/temp/search">
+<pre></pre>
 </div>
 <div created="20160225022501761" modified="20160225022503337" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -6877,6 +6881,29 @@ http://e2d3.org/
 http://dc-js.github.io/dc.js/
 
 </pre>
+</div>
+<div created="20160325040244327" modified="20160325040411971" tags="プログラミング" title="electron">
+<pre>node.jsとブラウザでアプリを作ってしまおうというもの。
+
+学習用のelectronicaというものがあるようなので、ここにメモ。
+
+https://github.com/yosuke-furukawa/electronica</pre>
+</div>
+<div created="20160323093245224" modified="20160401090424646" tags="プログラミング" title="elixir">
+<pre>erlangのruby風味付け、らしい
+
+並列が面白いようだ。
+
+ついでなので、dockerで環境を作る。
+詳細はこちら。
+
+http://qiita.com/izumin5210/items/5531f58f31d788bb8b9b
+
+３０日トレーニングでまず。
+
+https://github.com/seven1m/30-days-of-elixir
+
+でも、このトレーニング、標準入力を使うので、普通にコマンドラインからやったほうがいい。オフィシャルのDockerがあるので、それを利用するのが早い。また、シェルを起動するのもいいと思う。</pre>
 </div>
 <div created="20151120062829485" modified="20151120063011506" tags="HPC" title="FPGA">
 <pre>ALTERA
@@ -7153,9 +7180,14 @@ http://haselab.info</pre>
 
 http://www.forest.impress.co.jp/docs/news/20151202_733356.html</pre>
 </div>
-<div created="20150821052005315" modified="20160223081927350" tags="機械学習 マイニング" title="Topological Data Analysis (TDA)">
+<div created="20150821052005315" modified="20160330010115170" tags="機械学習 マイニング" title="Topological Data Analysis (TDA)">
 <pre>~DeepLearningの次。Topological Data Analysis (TDA) らしい。SOINNは単純にクラスタリングなのだけど、こいつの一部分ではないかという気がしないでもない。
 ~DeepLearning は学習コストが高すぎるのが問題。とんがった能力についてはそれでもアリなのだけど、このTDAもSOINNと同じで人間で言うところのざっくり認識には、こんな感じの教師なし学習が必要。
+
+---
+Open Source のツールまとめ
+
+http://www.kdnuggets.com/2015/11/topological-data-analysis-open-source-implementations.html
 
 ---
 ALBERTスタッフのブログ
